--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
             <img src="./src/imagens/personagem-tony-chopper.png" alt="">
 
             <div class="conteudo">
-                <i class="logo"></i>
-                <h2 class="nome_personagem">Tony Chopper</h2>
-                <p class="descricao">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                <div class="container_content">
+                    <i class="logo"></i>
+                    <h2 class="nome_personagem">Tony Chopper</h2>
+                    <p class="descricao">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                     Assumenda magnam ipsa nam architecto eos dolor omnis enim praesentium fugiat
                     unde ea rem aspernatur illo voluptates dolorum sit id, laudantium harum.</p>
+                </div>
             </div>
         </div>
 
@@ -33,11 +35,13 @@
             <img src="src/imagens/personagem-roronoa-zoro.png" alt="">
 
             <div class="conteudo">
-                <i class="logo"></i>
-                <h2 class="nome_personagem">Roronoa Zoro</h2>
-                <p class="descricao">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                    Assumenda magnam ipsa nam architecto eos dolor omnis enim praesentium fugiat
-                    unde ea rem aspernatur illo voluptates dolorum sit id, laudantium harum.</p>
+                <div class="container_content">
+                    <i class="logo"></i>
+                    <h2 class="nome_personagem">Roronoa Zoro</h2>
+                    <p class="descricao">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                        Assumenda magnam ipsa nam architecto eos dolor omnis enim praesentium fugiat
+                        unde ea rem aspernatur illo voluptates dolorum sit id, laudantium harum.</p>
+                </div>
             </div>
         </div>
 
@@ -45,7 +49,7 @@
             <img src="./src/imagens/personagem-monkey-d-luffy.png" alt="">
 
             <div class="conteudo">
-                <diV class="container_content">
+                <div class="container_content">
                     <i class="logo"></i>
                     <h2 class="nome_personagem">Monkey D. Luffy</h2>
                     <p class="descricao">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
@@ -59,11 +63,13 @@
             <img class="imagem" src="src/imagens/personagem-nami.png" alt="">
 
             <div class="conteudo">
-                <i class="logo"></i>
-                <h2 class="nome_personagem">Nami</h2>
-                <p class="descricao">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                    Assumenda magnam ipsa nam architecto eos dolor omnis enim praesentium fugiat
-                    unde ea rem aspernatur illo voluptates dolorum sit id, laudantium harum.</p>
+                <div class="container_content">
+                    <i class="logo"></i>
+                    <h2 class="nome_personagem">Nami</h2>
+                    <p class="descricao">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                        Assumenda magnam ipsa nam architecto eos dolor omnis enim praesentium fugiat
+                        unde ea rem aspernatur illo voluptates dolorum sit id, laudantium harum.</p>
+                </div>
             </div>
         </div>
 
@@ -71,43 +77,47 @@
             <img class="imagem" src="src/imagens/personagem-sanji.png" alt="">
 
             <div class="conteudo">
-                <h2 class="nome_personagem">Sanji</h2>
-                <i class="logo"></i>
-                <p class="descricao">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                <div class="container_content">
+                    <i class="logo"></i>
+                    <h2 class="nome_personagem">Sanji</h2>
+                    <p class="descricao">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                     Assumenda magnam ipsa nam architecto eos dolor omnis enim praesentium fugiat
                     unde ea rem aspernatur illo voluptates dolorum sit id, laudantium harum.</p>
+                </div>
             </div>
         </div>
     </main>
 
     <ul class="botoes">
         <li>
-            <button>
+            <button class="botao">
                 <img src="./src/imagens/tripulacao-nami.png" alt="">
             </button>
         </li>
         <li>
-            <button>
+            <button class="botao">
                 <img src="./src/imagens/tripulacao-zoro.png" alt="">
             </button>
         </li>
         <li>
-            <button>
+            <button class="botao selecionado">
                 <img src="./src/imagens/tripulacao-luffy.png" alt="">
             </button>
         </li>
         <li>
-            <button>
+            <button class="botao">
                 <img src="./src/imagens/tripulacao-chopper.png" alt="">
             </button>
         </li>
         <li>
-            <button>
+            <button class="botao">
                 <img src="./src/imagens/tripulacao-sanji.png" alt="">
             </button>
         </li>
         </li>
     </ul>
+
+    <script src="./src/js/index.js"></script>
 </body>
 
 </html>
